# inboard

./: .gitignore  DESIGN.md  README.md  SPEC.md  inboard.config.example.yaml  pyproject.toml
agent/: CLAUDE.md
agent/.claude/skills/cred-login/: SKILL.md
agent/.claude/skills/email-images/: SKILL.md
agent/.claude/skills/web-tasks/: SKILL.md
engines/: _common.sh  action-handler.sh  comment-handler.sh  inbox-agent.sh  webhook-server.py
lib/: ibconfig.py
setup/: apply_config.py  create_board.py  init.sh  local.inboard-agent.plist.template  local.inboard-webhook.plist.template
tests/: test_engines_common.sh
